--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </header>
 <div class="content">
     <div class="pic">
-        <img src="images/use.png" alt="">
+        <img class="hidden" src="images/use.png" alt="">
     </div>
 
     <div class="content_two">
@@ -28,6 +28,9 @@
     </a></div>
     </div>
 </div>
+
+
+
     <footer>
         created by username - luchioffice </footer>
 </body>
